@@ -7,6 +7,21 @@
 =================================================================
 -->
 <definitions>
+	<npc id="speed_slow">
+		<speed action="300" wander="600" />
+	</npc>
+	
+	<npc id="speed_medium">
+		<speed action="250" wander="500" />
+	</npc>	
+	
+	<npc id="speed_fast">
+		<speed action="200" wander="400" />
+	</npc>
+	
+	<npc id="speed_veryfast">
+		<speed action="175" wander="350" />
+	</npc>	
 
 	<!-- Animals -->
 	<include file="definitions/npcs/animals/index.xml"/>
