@@ -38,10 +38,18 @@
 		<tag name="res_cold" value="40,50" type="int" />
 		<tag name="res_poison" value="40,50" type="int" />
 		<tag name="res_energy" value="90,100" type="int" />
+		
 		<!-- Misc. -->
 		<controlslots>1</controlslots>
 		<category>Summoned\Energy Vortex</category>
 		<inherit id="speed_veryfast" />
+
+		<!-- Dispel Difficulty -->
+		<intproperty name="dispelfocus" value="20" />
+		<intproperty name="dispeldifficulty" value="80" />
+		
+		<!-- Poison immunity -->
+		<intproperty name="poison_immunity" value="4" />		
 	</npc>
 
 </definitions>
